--- a/katohi.html
+++ b/katohi.html
@@ -15,7 +15,7 @@
     <p id="alert"></p>
     <script src="library.js"></script>
     <script src="fonts.js"></script>
-    <script src="script.js"></script>
+    <script src="kana2.js"></script>
     <nav>
         <a href="index.html">Kana</a> |
         <a href="katohi.html">Kana 2</a> |
